size = 32x32
context = mimetypes
iconsdir = $(themedir)/$(size)/$(context)
icons_DATA = 				 		\
		audio-x-generic.png 		\
		gnome-fs-regular.icon 		\
		gnome-mime-application-info.png 		\
		gnome-mime-application-java.png 		\
		gnome-mime-application-magicpoint.png 		\
		gnome-mime-application-msword.png 		\
		gnome-mime-application-pdf.png 		\
		gnome-mime-application-postscript.png 		\
		gnome-mime-application-qif.png 		\
		gnome-mime-application-rhythmbox-effect.png 		\
		gnome-mime-application-rhythmbox-playlist.png 		\
		gnome-mime-application-vnd.lotus-1-2-3.png 		\
		gnome-mime-application-vnd.ms-excel.png 		\
		gnome-mime-application-vnd.ms-powerpoint.png 		\
		gnome-mime-application-vnd.rn-realmedia.png 		\
		gnome-mime-application-x-abiword.png 		\
		gnome-mime-application-x-applix-spreadsheet.png 		\
		gnome-mime-application-x-applix-word.png 		\
		gnome-mime-application-x-archive.png 		\
		gnome-mime-application-x-arj.png 		\
		gnome-mime-application-x-backup.png 		\
		gnome-mime-application-x-bzip-compressed-tar.png 		\
		gnome-mime-application-x-bzip.png 		\
		gnome-mime-application-x-class-file.png 		\
		gnome-mime-application-x-compress.png 		\
		gnome-mime-application-x-compressed-tar.png 		\
		gnome-mime-application-x-core.png 		\
		gnome-mime-application-x-cpio.png 		\
		gnome-mime-application-x-deb.png 		\
		gnome-mime-application-x-dia-diagram.png 		\
		gnome-mime-application-x-font-afm.png 		\
		gnome-mime-application-x-font-bdf.png 		\
		gnome-mime-application-x-font-linux-psf.png 		\
		gnome-mime-application-x-font-pcf.png 		\
		gnome-mime-application-x-font-psf.png 		\
		gnome-mime-application-x-font-sunos-news.png 		\
		gnome-mime-application-x-font-ttf.png 		\
		gnome-mime-application-x-gnucash.png 		\
		gnome-mime-application-x-gnumeric.png 		\
		gnome-mime-application-x-gtktalog.png 		\
		gnome-mime-application-x-gzip.png 		\
		gnome-mime-application-x-jar.png 		\
		gnome-mime-application-x-java-byte-code.png 		\
		gnome-mime-application-x-object-file.png 		\
		gnome-mime-application-x-ogg.png 		\
		gnome-mime-application-x-php.png 		\
		gnome-mime-application-x-python-bytecode.png 		\
		gnome-mime-application-x-python.png 		\
		gnome-mime-application-x-qw.png 		\
		gnome-mime-application-x-reject.png 		\
		gnome-mime-application-x-rpm.png 		\
		gnome-mime-application-x-shockwave-flash.png 		\
		gnome-mime-application-x-sql.png 		\
		gnome-mime-application-x-stuffit.png 		\
		gnome-mime-application-x-tar.png 		\
		gnome-mime-application-x-tex.png 		\
		gnome-mime-application-zip.png 		\
		gnome-mime-application.png 		\
		gnome-mime-audio-ac3.png 		\
		gnome-mime-audio-basic.png 		\
		gnome-mime-audio-x-aiff.png 		\
		gnome-mime-audio-x-it.png 		\
		gnome-mime-audio-x-midi.png 		\
		gnome-mime-audio-x-mod.png 		\
		gnome-mime-audio-x-mp3.png 		\
		gnome-mime-audio-x-pn-realaudio.png 		\
		gnome-mime-audio-x-s3m.png 		\
		gnome-mime-audio-x-stm.png 		\
		gnome-mime-audio-x-ulaw.png 		\
		gnome-mime-audio-x-voc.png 		\
		gnome-mime-audio-x-wav.png 		\
		gnome-mime-audio-x-xi.png 		\
		gnome-mime-audio-x-xm.png 		\
		gnome-mime-binary.png 		\
		gnome-mime-calendar.png 		\
		gnome-mime-email.png 		\
		gnome-mime-image-bmp.png 		\
		gnome-mime-image-gif.png 		\
		gnome-mime-image-ief.png 		\
		gnome-mime-image-jpeg.png 		\
		gnome-mime-image-png.png 		\
		gnome-mime-image-svg.png 		\
		gnome-mime-image-tiff.png 		\
		gnome-mime-image-x-applix-graphic.png 		\
		gnome-mime-image-x-cmu-raster.png 		\
		gnome-mime-image-x-portable-anymap.png 		\
		gnome-mime-image-x-portable-bitmap.png 		\
		gnome-mime-image-x-portable-graymap.png 		\
		gnome-mime-image-x-portable-pixmap.png 		\
		gnome-mime-image-x-psd.png 		\
		gnome-mime-image-x-rgb.png 		\
		gnome-mime-image-x-tga.png 		\
		gnome-mime-image-x-xbitmap.png 		\
		gnome-mime-image-x-xcf.png 		\
		gnome-mime-image-x-xfig.png 		\
		gnome-mime-image-x-xpixmap.png 		\
		gnome-mime-image-x-xwindowdump.png 		\
		gnome-mime-image.png 		\
		gnome-mime-text-csh.png 		\
		gnome-mime-text-css.png 		\
		gnome-mime-text-sh.png 		\
		gnome-mime-text-x-authors.png 		\
		gnome-mime-text-x-c++.png 		\
		gnome-mime-text-x-c-header.png 		\
		gnome-mime-text-x-c.png 		\
		gnome-mime-text-x-credits.png 		\
		gnome-mime-text-x-csrc.png 		\
		gnome-mime-text-x-install.png 		\
		gnome-mime-text-x-java.png 		\
		gnome-mime-text-x-makefile.png 		\
		gnome-mime-text-x-perl.png 		\
		gnome-mime-text-x-readme.png 		\
		gnome-mime-text-x-scheme.png 		\
		gnome-mime-text-x-tex.png 		\
		gnome-mime-text-zsh.png 		\
		gnome-mime-text.png 		\
		gnome-mime-video-mpeg.png 		\
		gnome-mime-video-quicktime.png 		\
		gnome-mime-video-x-ms-asf.png 		\
		gnome-mime-video-x-ms-wmv.png 		\
		gnome-mime-video-x-msvideo.png 		\
		gnome-mime-x-directory-nfs-share.png 		\
		gnome-mime-x-directory-smb-share.png 		\
		gnome-mime-x-font.png 		\
		gnome-package.png 		\
		stock_dnd.png 		\
		stock_dnd_multiple.png 		\
		stock_generic-mimetype.png 		\
		sun-java.png 		\
		text-html.png 		\
		video-x-generic.png 		\
		x-office-document.png 		\
		x-office-presentation.png 		\
		x-office-spreadsheet.png
EXTRA_DIST = $(icons_DATA)

install-data-local: install-iconsDATA
	(cd $(DESTDIR)$(themedir)/$(size) && $(ICONMAP) -c $(context) -e $(iconsrcdir)/icons/my-mapping.xml)

uninstall-local:
	rm -Rf $(DESTDIR)$(themedir)/$(size)/$(context)
